cic_examples/cpx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cpx-ingress
  annotations:
   kubernetes.io/ingress.class: citrix-vpx 
   ingress.citrix.com/frontend-ip: "10.0.32.9"
spec:
  rules:
  - host:  www.guestbook.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cpx-cic-cpx-service
          servicePort: 80
