cic_examples/guestbook-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
   kubernetes.io/ingress.class: "citrix-cpx"
   #ingress.citrix.com/frontend-ip: 10.106.172.254
spec:
  rules:
  - host:  www.guestbook.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
